--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "description": "Backend API for shopping webapp",
   "dependencies": {
     "@devcycle/nodejs-server-sdk": "^1.50.0",
+    "@openfeature/server-sdk": "^1.13.0",
     "@nestjs/common": "^11.1.3",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.3",
