--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "scripts": {
     "start": "node dist/main",
     "dev": "nest start --watch",
+    "dev:otel": "npm run build && node --require ./dist/otelSetup.js dist/main.js",
+    "dev:local-otlp": "npm run build && USE_LOCAL_OTLP=true node --require ./dist/otelSetup.js dist/main.js",
     "build": "nest build",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "start:prod:otel": "node --require ./dist/otelSetup.js dist/main.js",
+    "start:prod:local-otlp": "USE_LOCAL_OTLP=true node --require ./dist/otelSetup.js dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "format": "prettier --write \"src/**/*.ts\"",
@@ -26,7 +30,6 @@
   "description": "Backend API for shopping webapp",
   "dependencies": {
     "@devcycle/nodejs-server-sdk": "^1.50.0",
-    "@openfeature/server-sdk": "^1.13.0",
     "@nestjs/common": "^11.1.3",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.3",
@@ -34,7 +37,18 @@
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.3",
+    "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@openfeature/core": "^1.8.0",
+    "@openfeature/server-sdk": "^1.13.0",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.202.0",
+    "@opentelemetry/instrumentation-express": "^0.51.0",
+    "@opentelemetry/instrumentation-http": "^0.202.0",
+    "@opentelemetry/resources": "^2.0.1",
+    "@opentelemetry/sdk-node": "^0.202.0",
+    "@opentelemetry/sdk-trace-base": "^2.0.1",
+    "@opentelemetry/semantic-conventions": "^1.34.0",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -49,6 +63,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "sqlite3": "^5.1.7",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.24",
     "uuid": "^11.1.0"
   },
