--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "description": "Backend API for shopping webapp",
   "dependencies": {
     "@devcycle/nodejs-server-sdk": "^1.50.0",
+    "@devcycle/openfeature-nestjs-provider": "^1.9.0",
     "@nestjs/common": "^11.1.3",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.3",
@@ -40,6 +41,7 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "@openfeature/core": "^1.8.0",
+    "@openfeature/nestjs-sdk": "^0.2.5",
     "@openfeature/server-sdk": "^1.13.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/exporter-trace-otlp-proto": "^0.202.0",
