--- a/java-backend/pom.xml
+++ b/java-backend/pom.xml
@@ -102,7 +102,7 @@
         <dependency>
             <groupId>com.devcycle</groupId>
             <artifactId>java-server-sdk</artifactId>
-            <version>2.9.0-LOCAL-SNAPSHOT</version>
+            <version>2.9.0</version>
         </dependency>
 
         <!-- OpenFeature SDK -->
